src/objects/ByPassWorkflows__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>Created for: Nokia Portugal COE | Workflows Logic Bypass</description>
    <fields>
        <fullName>AccountWorkflows__c</fullName>
        <defaultValue>false</defaultValue>
        <label>AccountWorkflows</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Account</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Asset__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Asset</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CH_Workgroup__c</fullName>
        <defaultValue>false</defaultValue>
        <label>CH_Workgroup</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Case__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Case</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Contact</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EventWorkflows__c</fullName>
        <defaultValue>false</defaultValue>
        <label>EventWorkflows</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Event_RegistrationWorkflows__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Event_RegistrationWorkflows</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Event_Registration__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Event_Registration</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Event__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Event</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SessionWorkflows__c</fullName>
        <defaultValue>false</defaultValue>
        <label>SessionWorkflows</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Session__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Session</label>
        <type>Checkbox</type>
    </fields>
    <label>ByPassWorkflows</label>
</CustomObject>